--- a/static/css/style.css
+++ b/static/css/style.css
@@ -102,9 +102,9 @@
   cursor: pointer;
   font-weight: 500;
 }
-#content
+.content
 {
-    background-image: url("hero_left_700x450px@2x.png");
+    background-image: url("images/hero_left_700x450px@2x.png");
     display: -webkit-box;
 }
 .teamwork
@@ -118,7 +118,7 @@
 {
     float:right;
 }
-.withteam
+#with-team
 {
     margin-left:50px;
 }
@@ -217,7 +217,7 @@
     font-family:Charlie Text, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
     width: 400px;
 }
-.register
+#register
 {
     color:#FFBDF0;
     text-decoration: none;
@@ -276,7 +276,7 @@
     color: #0065ff;
     font-weight: 500;
     font-family: Charlie Text, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
-    /* margin-left: -30px; */
+    cursor: pointer;
 }
 .join-com
 {
@@ -284,7 +284,8 @@
     color: #0065ff;
     font-weight: 500;
     font-family: Charlie Text, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
-    padding-left: 150px; 
+    padding-left: 150px;
+    cursor: pointer; 
 }
 .asian-community p
 {
