--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,6 +34,11 @@
     border-radius: 5px;
     width: 100px;
     height: 35px;
+    border-radius: 3px;
+    cursor: pointer;
+    padding: 4px 25px 4px 14px;
+    position: relative;
+    text-decoration: none;
 }
 .for-teams
 {
